docs(swagger): updated swagger
- updated swagger dependency
- updated swagger documentation